Fix size arrow in Collapse

--- a/src/components/collapse/collapse.scss
+++ b/src/components/collapse/collapse.scss
@@ -45,6 +45,10 @@
             width: 1023px;
             height: 47px;
             font-size: 24px;
+
+            .arrow-down, .arrow-up {
+                width: 24px;
+            }
         }
   
     }
